--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,3 +40,98 @@ body{
 .nav-link:hover{
     text-decoration: underline;
 }
+
+/* main */
+.search-icon{
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+    margin-bottom:15px;
+}
+
+.bar{
+    width: 85%;
+    font-size: 1rem;
+    box-sizing: border-box;
+    border: none;
+    outline: none;
+}
+
+.search-bar{
+    display: flex;
+    justify-content: center;
+    width: 45%;
+    border-radius: 30px;
+    border: 2px solid #eee;
+}
+
+.search-icon{
+    padding-right: 10px;
+}
+.search-bar:hover{
+    box-shadow: 3px 3px 3px 3px #eee;
+}
+
+.center{
+    display: flex;
+    justify-content: center;
+}
+
+.btn{
+    display: inline;
+    border: 1px solid #fff;
+    align-items: center;
+    margin: 15px;
+    padding:10px;
+    border-radius: 3px;
+}
+
+.btn:hover{
+    cursor: pointer;
+    border: 0.5px solid #aaa;
+}
+
+.text-info{
+    display: flex;
+    justify-content: center;
+    font-size: 85%;
+}
+
+.search-info{
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+/* Footer */
+
+.txt{
+    padding: 15px 30px;
+    color: rgba(0, 0, 0, 0.7);
+    font-size: 95%;
+    padding-top: 0px;
+    margin: 0;
+
+}
+
+.fcountry{
+    border-bottom: 1px solid #aaa;
+}
+
+.container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.content-left, .content-right{
+    display: inline;
+
+}
+
+.content-footer{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
